--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^5.8.1",
     "passport": "^0.4.1",
     "passport-http-bearer": "^1.0.1",
+    "react-responsive-spritesheet": "^2.3.9",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
