--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "s": "nodemon server.js",
     "debug-server": "DEBUG=express:* nodemon server.js"
   },
-  "author": "",
+  "author": "Amalia",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.7",
@@ -23,9 +23,7 @@
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.1",
     "passport": "^0.4.1",
-    "passport-http-bearer": "^1.0.1",
-    "react-responsive-spritesheet": "^2.3.9",
-    "styled-components": "^5.3.0"
+    "passport-http-bearer": "^1.0.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
